--- a/cloud/pay/package.json
+++ b/cloud/pay/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "getJMYPGoods",
+  "name": "pay",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "wx-server-sdk": "~2.3.3"
+    "tenpay": "^2.1.18",
+    "wx-server-sdk": "~2.4.0"
   }
 }
