--- a/cloud/getopenid/package.json
+++ b/cloud/getopenid/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "getHomeSwiperImages",
+  "name": "getopenid",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,6 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "wx-server-sdk": "~2.3.3"
+    "wx-server-sdk": "~2.4.0"
   }
 }
