完成订单的评论以及评论的显示

--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
     "pages/login/index",
     "pages/auth/index",
     "pages/pay/index",
-    "pages/orderdetail/index"
+    "pages/orderdetail/index",
+    "pages/evaluate/index"
   ],
   "window": {
     "backgroundTextStyle": "dark",
