--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/addGoods/index",
     "pages/user/index",
+    "pages/phone/index",
     "pages/index/index",
     "pages/demo2/demo2",
     "pages/demo3/demo3",
