订单条目新增商品名

--- a/project.config.json
+++ b/project.config.json
@@ -41,7 +41,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.15.0",
-  "projectname": "jmyp-%E5%A4%84%E7%90%86%E8%AE%A2%E5%8D%95",
+  "projectname": "%E7%88%B1%E9%9B%B6%E9%A3%9F",
   "debugOptions": {
     "hidedInDevtools": []
   },
